--- a/line-losses.html
+++ b/line-losses.html
@@ -59,7 +59,7 @@
 <body>
 	<header>
 		<div class="header-content">
-			<div id="name">NICHOLAS S SELBY</div>
+			<a href="index.html" id="name">NICHOLAS S SELBY</a>
 			<nav>
 				<input class="menu-btn" type="checkbox" id="menu-btn">
 				<label class="menu-icon" for="menu-btn" tabindex="0"><span class="navicon"></span></label>
