fix algorithm wrapping

--- a/binomials.html
+++ b/binomials.html
@@ -204,7 +204,7 @@
 			<h2>Algorithm</h2>
 			<p>Now that we have computed the gradient for \(J\), we can apply any gradient-based optimization algorithm to solve Eq. (5). For example, applying gradient descent with step size \(\alpha\) and stop condition \(\epsilon\):</p>
 			
-			<div class="algorithm equation">
+			<div class="algorithm">
 				<div class="state">Given inputs \(t(k)\), \(m\), \(n\), \(\alpha\), and \(\epsilon\):</div>
 				<div class="state">\(i \gets 1\)</div>
 				<div class="state"><b>while</b> \(i \leq m\) <b>do</b>:</div>
