--- a/binomials.html
+++ b/binomials.html
@@ -212,7 +212,7 @@
 					<div class="state">\(p_i \sim U_{[0,1]}\)</div>
 					<div class="state">\(i\gets i+1\)</div>
 				</div>
-				<div class="state">\(D\gets \inf\)</div>
+				<div class="state">\(D\gets \infty\)</div>
 				<div class="state"><b>while</b> \(D\geq \epsilon\) <b>do</b>:</div>
 				<div class="indented">
 					<div class="state">\(t'(k)\gets \sum_{i=1}^m f(k;n,p_i')\)</div>
