review for Social Sciences and Humanities Open

--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
 					<li>Best Oral Presentation at the Georgia Tech Undergraduate Research Symposium (2016)</li>
 					<li>President's Undergraduate Research Award from the Georgia Institute of Technology (2015)</li>
 					<li>Air Products Undergraduate Research Award from Air Products and Chemicals, Inc. (2015)</li>
-					<li>Best Utility Simulation for Product Design from the ASME 2014 International Design & Engineering Technical Conferences & Computers & Information in Engineering Conference (2014)</li>
+					<li>Best Utility Simulation for Product Design from the ASME 2014 International Design &amp; Engineering Technical Conferences &amp; Computers &amp; Information in Engineering Conference (2014)</li>
 					<li>Stamps Leadership Scholarship, a merit-based, full-ride scholarship awarded to the top 12 of 14,731 applicants, from the Stamps Family Charitable Foundation (2013)</li>
 				</ul>
 			</details>
@@ -321,7 +321,7 @@
 					<li>Panelist on "Harnessing Solar Energy: The Role of Energy Storage in Off-Grid Solutions," a SolarQuarter webinar (2024)</li>
 					<li>Keynote speaker for "<a rel="external" href="https://www.youtube.com/watch?v=sM0IXgB1occ" target="_blank">Mechanical Engineering Shaping the World</a>" event at the Georgia Institute of Technology (2023)</li>
 					<li>Invited lecturer for "Electric Vehicles and the Grid" course at the Georgia Institute of Technology (2023)</li>
-					<li>Panelist on "The East Africa Renewable Energy Mix: Critical Approaches towards a Just Transition" at the Africa ESG & Impact Investing Summit (2023)</li>
+					<li>Panelist on "The East Africa Renewable Energy Mix: Critical Approaches towards a Just Transition" at the Africa ESG &amp; Impact Investing Summit (2023)</li>
 					<li>Panelist on "Solar and Green Energy as Ways of Harnessing Affordable Energy that is Environmentally Friendly" at the Intergovernmental Authority on Development's Kampala Declaration Forum (2022) </li>
 					<li>Panelist on "How Mini-Grids are Electrifying the Region" at the Eastern Africa Solar Week Conference (2022)</li>
 					<li>Invited lecturer for the MIT Office of Engineering Outreach Programs' summer workshop, "An Introduction to Machine Learning with PyTorch" (2021)</li>
@@ -347,6 +347,7 @@
 					<li>IEEE Transactions on Mobile Computing</li>
 					<li>IFAC International Symposium on Advances in Automotive Control</li>
 					<li>International Symposium on Mathematical Theory of Networks and Systems</li>
+					<li>Social Sciences &amp; Humanities Open</li>
 				</ul>
 			</details>
 		</section>
