whatsapp business card

--- a/business-card.html
+++ b/business-card.html
@@ -52,6 +52,11 @@
 			<p>nicholas.selby@renewvia.com</p>
 		</a>
 
+		<a class="contact" href="https://wa.me/message/O3RIQDAL42IMA1" target="_blank">
+			<img alt="WhatsApp icon" src="business-card/icon-wa.jpg">
+			<p>+254 111777379</p>
+		</a>
+
 		<a class="contact" href="https://rupumped.github.io/" target="_blank">
 			<img alt="Website icon" src="business-card/icon-website.jpg">
 			<p>Personal Website</p>
