unconventional resources review

--- a/index.html
+++ b/index.html
@@ -348,6 +348,7 @@
 					<li>IFAC International Symposium on Advances in Automotive Control</li>
 					<li>International Symposium on Mathematical Theory of Networks and Systems</li>
 					<li>Social Sciences &amp; Humanities Open</li>
+					<li>Unconventional Resources</li>
 				</ul>
 			</details>
 		</section>
