fifo natural number not int

--- a/fifo.html
+++ b/fifo.html
@@ -147,7 +147,7 @@
 							\mathrm{C} = \sum_{i=1}^n \left( \min \left(\mathrm{Q}+\mathrm{Q}'-\sum_{j=1}^{i-1} \mathrm{q}_j, \mathrm{q}_i - \mathrm{min} \left(\mathrm{q}_i, \mathrm{Q}'-\sum_{j=1}^{i-1} \mathrm{q}_j \right) \right) \times \mathrm{c}_i \right)
 						\end{equation}
 					</div>
-					where \(n\) is the smallest integer such that \(\sum_{i=1}^n \mathrm{q}_i \geq \mathrm{Q}+\mathrm{Q}'\).
+					where \(n\) is the smallest natural number such that \(\sum_{i=1}^n \mathrm{q}_i \geq \mathrm{Q}+\mathrm{Q}'\).
 				</li>
 			</ol>
 
