--- a/guide-to-kenya.html
+++ b/guide-to-kenya.html
@@ -163,23 +163,22 @@
 
 			<p>Nairobi has a ton of good restaurants. Here is an incomplete list of my favorites:</p>
 			<ul>
-				<li><a rel="external" target="_blank" href="http://www.abyssiniarestaurantnairobi.com/">Abyssinia</a>: Ethiopian</li>
+				<li><a rel="external" target="_blank" href="http://www.abyssiniarestaurantnairobi.com/">Abyssinia</a>: Ethiopian. Abyssinia has the best shiro, but if you want meat, go to <a rel="external" target="_blank" href="https://asmara.co.ke/">Asmara</a> or <a rel="external" target="_blank" href="https://maps.app.goo.gl/GrjUqhXLhAhDUrHJ6">Gursha</a> instead.</li>
 				<li><a rel="external" target="_blank" href="http://www.fogogaucho.co.ke/">Fogo Gaucho</a>: Brazilian steakhouse serving nyama choma</li>
 				<li><a rel="external" target="_blank" href="https://saritexpo.com/">Sarit Center</a> food court: a mall food court with an open roof and food and beer</li>
 				<li><a rel="external" target="_blank" href="https://craftychameleon.co.ke/">Crafty Chameleon</a>: beer garden</li>
 				<li><a rel="external" target="_blank" href="https://goo.gl/maps/FQcKdWPA3Ki7Xkwo8">K'Osewe Ranalo</a>: cafeteria-style Kenyan food downtown with open-roof seating</li>
 				<li><a rel="external" target="_blank" href="http://www.havana.co.ke/">Havana</a>: Mexican-Kenyan fusion with creative tacos</li>
 				<li><a rel="external" target="_blank" href="https://maps.app.goo.gl/YgHSXvNuuznL6BVG9">Nargis</a>: Indian barbecue</li>
-				<li><a rel="external" target="_blank" href="https://www.chimekhouse.com/">Chimek</a>: Korean</li>
+				<li><a rel="external" target="_blank" href="https://www.chimekhouse.com/">Chimek</a>: Korean (get the kanjang chicken)</li>
 				<li>Cafés like <a rel="external" target="_blank" href="https://palletcafe.co.ke/">Pallet Cafe</a>, <a rel="external" target="_blank" href="https://ke.springvalleycoffee.com/">Spring Valley Coffee</a>, <a rel="external" target="_blank" href="https://maps.app.goo.gl/nGcWm94sehYMXf8H7">Wasp & Sprout</a>, <a rel="external" target="_blank" href="https://www.shambacafe.co.ke/">Shamba Cafe</a>, <a rel="external" target="_blank" href="https://www.therivercafekenya.com/">River Cafe</a>, and <a rel="external" target="_blank" href="https://maps.app.goo.gl/F1K2KvnMCXpJ7pNZA">270°</a></li>
 				<li><a rel="external" target="_blank" href="https://goo.gl/maps/aeuH6A6XGcEameQQ8">Chinatown</a></li>
-				<li><a rel="external" target="_blank" href="https://goo.gl/maps/NTZ3LAKrbhX81ncC9">Cultiva</a>: maybe the tastiest restaurant in Nairobi</li>
+				<li><a rel="external" target="_blank" href="https://goo.gl/maps/NTZ3LAKrbhX81ncC9">Cultiva</a>: maybe the tastiest restaurant in Nairobi (get the mushroom ceviche)</li>
 				<li><a rel="external" target="_blank" href="http://sushimitsuki.com/">Sushi Mitsuki</a>: authentic sushi, very expensive</li>
 				<li><a rel="external" target="_blank" href="https://www.hemingways-collection.com/nairobi/dining/">Hemmingway's</a>: bottomless brunch</li>
 				<li><a rel="external" target="_blank" href="https://goo.gl/maps/WwwJhTdNbiT8zCFF9">Yolo Ice Cream</a>: popular dessert hangout with massive portions</li>
 				<li>I eat lunch almost every day at a kibanda, or street food stall, down the street from my house. I get a mix of beans, cabbage, hot peppers, cut chapati, and sliced avocado with a cup of chai for about $1.</li>
 			</ul>
-
 
 			<figure>
 				<img class="img-center" src="blog-posts/kenya-kibanda.jpg" alt="My family and I enjoying lunch at a kibanda" style="width: 10cm;">
