robust control journal review

--- a/index.html
+++ b/index.html
@@ -346,6 +346,7 @@
 					<li>IEEE Transactions on Intelligent Transportation Systems</li>
 					<li>IEEE Transactions on Mobile Computing</li>
 					<li>IFAC International Symposium on Advances in Automotive Control</li>
+					<li>International Journal of Robust and Nonlinear Control</li>
 					<li>International Symposium on Mathematical Theory of Networks and Systems</li>
 					<li>Social Sciences &amp; Humanities Open</li>
 					<li>Unconventional Resources</li>
