rm feb from blog

--- a/blog.html
+++ b/blog.html
@@ -100,7 +100,7 @@
 				<img src="blog/kenya.jpg" alt="My friends and I feeding a giraffe">
 				<div>
 					<h2>Nairobi Bound: A Comprehensive Guide for Americans Starting a New Life in Kenya's Capital</h2>
-					<p class="teaser">When I moved to Kenya in February 2022, I had never been to Africa. This is a collection of everything I wish I knew before I moved.</p>
+					<p class="teaser">When I moved to Kenya in 2022, I had never been to Africa. This is a collection of everything I wish I knew before I moved.</p>
 					<span class="est-read-time">40</span>
 				</div>
 			</article>
