--- a/speaker-rider.html
+++ b/speaker-rider.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
-	<title>About Me</title>
+	<title>Speaker Rider</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<!-- SEO Description -->
 	<meta name="author" content="Nicholas S. Selby">
-	<meta name="description" content="About Nicholas Selby">
-	<link rel="canonical" href="https://rupumped.github.io/about.html">
+	<meta name="description" content="Nicholas Selby's speaker rider">
+	<link rel="canonical" href="https://rupumped.github.io/speaker-rider.html">
 
 	<!-- Open Graph Tags -->
-	<meta property="og:title" content="About Me">
-	<meta property="og:description" content="About Nicholas Selby">
+	<meta property="og:title" content="Speaker Rider">
+	<meta property="og:description" content="Nicholas Selby's speaker rider">
 	<meta property="og:image" content="https://rupumped.github.io/og-image.jpg">
 	<meta property="og:image:width" content="1498">
 	<meta property="og:image:height" content="778">
@@ -31,7 +31,6 @@
 
 	<!-- Custom CSS -->
 	<link rel="stylesheet" type="text/css" href="main.css">
-	<link rel="stylesheet" type="text/css" href="about/about.css">
 </head>
 <body>
 	<header>
@@ -42,7 +41,7 @@
 				<label class="menu-icon" for="menu-btn" tabindex="0"><span class="navicon"></span></label>
 				<ul class="menu">
 					<li><a href="index.html">HOME</a></li>
-					<li><a class="active-link" href="about.html">ABOUT</a></li>
+					<li><a href="about.html">ABOUT</a></li>
 					<li><a href="selected-work.html">PROJECTS</a></li>
 					<li><a href="blog.html">BLOG</a></li>
 					<li><a href="service.html">SERVICE</a></li>
@@ -52,33 +51,41 @@
 	</header>
 
 	<main>
-		<div id="quote-container" class="section">
-			<div id="quote-symbol">"</div>
-			<div id="quote">
-				<div id="quote-words">
-					The whole secret of life is to be interested in one thing profoundly and in a thousand things as well.
-				</div>
-				<div id="quote-citation">
-					— Horace Walpole
-				</div>
-			</div>
-		</div>
+		<h1>Speaker Rider</h1>
 
-		<div id="bio" class="section">
-			<p><img class="img-right" src="about/dog.jpg" alt="Me playing with a dog">I am Nick Selby, and I am passionate about engineering that centers users and their communities. I have always wanted to "be an inventor when I grow up." I started my first company at age 18 coding and selling applications for graphing calculators to help high school and college students with their math homework. Since then, I have gotten to do research in quantum computing, build a solar-powered racecar, and travel internationally to teach students how to use engineering to improve their communities.</p>
+		<img class="img-full-width" src="speaker-rider/speaker-rider.png" alt="Four photos of me speaking at various professional events">
 
-			<p>Watching someone's face light up in newfound comprehension delights me. I have had the privilege of teaching computer science, physics, and robotics courses at <img class="img-left" src="about/teaching.jpg" alt="Me teaching a group of students how to solder">undergraduate and graduate levels, and was honored when my students' course evaluations ranked me in the 99th percentile of all instructors at Georgia Tech. My passion for teaching also helps me be a better leader. In my role as VP of Engineering for an African solar mini-grid company, I lead the engineering and construction of solar mini-grids across Africa. Often, this means teaching engineering analysis and power electronics operation to my employees and local technicians we hire. Regardless of where I work, I grow the knowledge base of my coworkers and teammates.</p>
+		<p>Having delivered presentations worldwide to audiences sometimes numbering in the thousands, I am honored by the responsibility the stage gives me to teach, inspire, and delight. This document sets expectations for event organizers seeking my service as a speaker. It is adapted from the speaker riders of <a rel="external" target="_blank" href="https://github.com/M0nica/M0nica/blob/main/speaker-rider.md">Monica Powell</a> and <a rel="external" target="_blank" href="https://gist.github.com/tatianamac/493ca668ee7f7c07a5b282f6d9132552">Tatiana Mac</a>.</p>
 
-			<p>When I'm not building something, I enjoy public speaking, hiking, and traveling. Public speaking is my artistic outlet. The act of speaking to a crowd, be it professionally, motivationally, or theatrically, brings me joy. I have had the privilege of delivering presentations around the world to audiences that sometimes number in the thousands. Whatever the occasion, I am honored by the responsibility the stage gives me to teach, inspire, and delight. Interested in inviting me to speak at your event? Please read my <a href="speaker-rider.html">speaker rider</a> before reaching out.</p>
+		<div class="separator"></div>
 
-			<img class="img-full-width" src="about/fun.png" alt="three images side-by-side: me on a mountain in Antarctica, me in a rice paddy in China, and me in the foothills in Arizona">
+		<p>🤝 <b>Value Alignment:</b> I understand you may not be able to meet all criteria below. Please reach out to discuss possible accommodations if you believe we can collaborate effectively.</p>
 
-			<p>Many of my favorite adventures happen while traveling. I've kayaked in Scotland, backpacked in Patagonia, farmed rice paddies in China, and mountaineered in Antarctica. After trekking through otherworldly landscapes, I further the adventure by enjoying the local cuisine—the spicier the better—and discussing culture, politics, and philosophy with people I meet. My goal is to develop a strong engineering skillset and collaborate with researchers and entrepreneurs around the world to solve problems at the community level.</p>
+		<p>✈️ <b>Travel and Accommodations:</b> All travel and lodging expenses should be covered for the full duration of the event, plus one day before for events outside Kenya. No accommodation expenses are required for events in Nairobi or remote presentations.</p>
 
-			<p>Send me an email if you have an interesting project on which you would like to collaborate. I am always ready for another adventure.</p>
+		<p>🎫 <b>Ticket to Full Event:</b> I request full access to attend the entire event where I'm speaking.</p>
 
-			<img class="img-full-width" src="about/final.jpg" alt="Me looking over Patagonia">
-		</div>
+		<p>💰 <b>Speaker Honorarium:</b> For profit-driven conferences, I request an honorarium of $1,000-2,000 USD, with specific amount depending on ticket pricing and venue accessibility. I view speaking as a form of professional community service and gladly waive fees for free-admission, non-profit, or community-focused events.</p>
+
+		<p>🔺 <b>Accessibility:</b> All conference areas must be accessible and comply with the Americans with Disabilities Act standards and/or equivalent international accessibility guidelines.</p>
+
+		<p>👩🏾 <b>Diverse Speaker Line-Up:</b> Events or panels to which I'm invited should include at least one non-binary person of color or woman of color in a speaking role that goes beyond discussing experiences of marginalization. Ideally, your speaker lineup reflects diversity across race, gender identity, national origin, and physical/mental abilities.</p>
+
+		<p>🛡️ <b>Intellectual Property:</b> I retain all rights to my content. Recording distribution is permitted only if materials are properly captioned and freely available (no paywalls).</p>
+
+		<p>🎙️ <b>Recording:</b> I request recordings of my presentation, including audio, video, and photographs when possible, for personal review and development.</p>
+
+		<div class="separator"></div>
+
+		<p>Thank you for reviewing my speaker requirements! Please include the following in your invitation:</p>
+		<ul>
+			<li>Confirmation you've read this rider, including any questions or criteria you cannot meet</li>
+			<li>Conference name, website, date of events, location</li>
+			<li>Budget for speaker honorarium</li>
+			<li>Current or planned speaker list, or specific diversity objectives if early in selection process</li>
+			<li>Proposed speaking topic or focus area</li>
+			<li>Expected duration of presentation</li>
+		</ul>
 	</main>
 
 	<footer>
