--- a/index.html
+++ b/index.html
@@ -312,6 +312,7 @@
 					<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="chevron" aria-label="Expand icon"><polyline points="6 9 12 15 18 9"></polyline></svg>
 					<h2>Professional Service</h2>
 				</summary>
+				<p>Interested in inviting me to speak at your event? Please read my <a href="speaker-rider.html">speaker rider</a> before reaching out.</p>
 				Public Speaking:
 				<ul>
 					<li>Panelist on the "Renewable Energy Roundtable" at the American Chamber of Commerce Business Summit, "Catalyzing the Future of U.S.-East Africa Trade and Investment" (2024)</li>
