--- a/speaker-rider.html
+++ b/speaker-rider.html
@@ -31,6 +31,7 @@
 
 	<!-- Custom CSS -->
 	<link rel="stylesheet" type="text/css" href="main.css">
+	<link rel="stylesheet" type="text/css" href="secondary.css">
 </head>
 <body>
 	<header>
