--- a/speaker-rider.html
+++ b/speaker-rider.html
@@ -81,7 +81,7 @@
 		<p>Thank you for reviewing my speaker requirements! Please include the following in your invitation:</p>
 		<ul>
 			<li>Confirmation you've read this rider, including any questions or criteria you cannot meet</li>
-			<li>Conference name, website, date of events, location</li>
+			<li>Conference name, website, date of events, and location</li>
 			<li>Budget for speaker honorarium</li>
 			<li>Current or planned speaker list, or specific diversity objectives if early in selection process</li>
 			<li>Proposed speaking topic or focus area</li>
