--- a/index.html
+++ b/index.html
@@ -344,6 +344,7 @@
 					<li>ACM Transactions on Sensor Networks</li>
 					<li>IEEE International Conference on Intelligent Robots and Systems</li>
 					<li>IEEE Internet of Things Journal</li>
+					<li>IEEE Transactions on Circuits and Systems</li>
 					<li>IEEE Transactions on Intelligent Transportation Systems</li>
 					<li>IEEE Transactions on Mobile Computing</li>
 					<li>IFAC International Symposium on Advances in Automotive Control</li>
