--- a/public-speaking-problems.html
+++ b/public-speaking-problems.html
@@ -108,12 +108,12 @@
 
 		<section class="odd">
 			<h2>Monotone Voice, Invariant Vocal Pattern, or Sounding Rehearsed</h2>
-			<p>Recite each line using three drastically different vocal patterns, even if some of them are ridiculous. This will help your brain break subconcious habits in your cadence. As a bonus, you may find a new way of speaking a line that you want to keep.</p>
+			<p>Recite each line using three drastically different vocal patterns, even if some of them are ridiculous. This will help your brain break subconscious habits in your cadence. As a bonus, you may find a new way of speaking a line that you want to keep.</p>
 		</section>
 
 		<section class="even">
 			<h2>Repetitive or Insufficient Hand Gestures</h2>
-			<p>Recite each line using three different hand gestures, even if some of them don't make sense. This will help your brain break subconcious habits in your gesturing. Remember that there are generally three binary choices for each hand gesture: one or two hands, palms facing up or down, and hands inside or outside the frame of the torso. </p>
+			<p>Recite each line using three different hand gestures, even if some of them don't make sense. This will help your brain break subconscious habits in your gesturing. Remember that there are generally three binary choices for each hand gesture: one or two hands, palms facing up or down, and hands inside or outside the frame of the torso. </p>
 		</section>
 
 		<section class="odd">
