--- a/index.html
+++ b/index.html
@@ -351,6 +351,7 @@
 					<li>IFAC International Symposium on Advances in Automotive Control</li>
 					<li>International Journal of Robust and Nonlinear Control</li>
 					<li>International Symposium on Mathematical Theory of Networks and Systems</li>
+					<li>Oxford Open Energy</li>
 					<li>Social Sciences &amp; Humanities Open</li>
 					<li>Unconventional Resources</li>
 				</ul>
