--- a/guide-to-kenya.html
+++ b/guide-to-kenya.html
@@ -279,8 +279,8 @@
 						<td>Hatujambo</td>
 					</tr>
 					<tr>
-						<td>Nyaje</td>
-						<td>Come on</td>
+						<td>Niaje</td>
+						<td>How is it</td>
 						<td>Poa</td>
 					</tr>
 					<tr>
