--- a/index.html
+++ b/index.html
@@ -315,6 +315,7 @@
 				<p>Interested in inviting me to speak at your event? Please read my <a href="speaker-rider.html">speaker rider</a> before reaching out.</p>
 				Public Speaking:
 				<ul>
+					<li>Panelist on "Impact Mining: Bitcoin Hashrate for Good" episode of Bitcoin Mining and Beyond's <i><a rel="external" target="_blank" href="https://creators.spotify.com/pod/profile/compass-mining/episodes/Impact-Mining---Bitcoin-Hashrate-for-Good-w-Austin-Mitchell--Nicholas-Selby-e337nf7">Compass Mining</a></i> podcast (2025)</li>
 					<li>Panelist on the "Renewable Energy Roundtable" at the American Chamber of Commerce Business Summit, "Catalyzing the Future of U.S.-East Africa Trade and Investment" (2024)</li>
 					<li>Keynote speaker at the Africa Mini-Grid Developers Association "Innovation Exchange Forum" (2024)</li>
 					<li>Panelist on "Challenges and Opportunities in the Development of Mini-Grids in Kenya" at The Solar Week Kenya conference (2024)</li>
