--- a/index.html
+++ b/index.html
@@ -351,6 +351,7 @@
 				Journal Referee [<a rel="external" href="https://www.webofscience.com/wos/author/record/1974564" target="_blank">Web of Science</a>]:
 				<ul>
 					<li>ACM Transactions on Sensor Networks</li>
+					<li>AIAA Journal of Guidance, Control, and Dynamics</li>
 					<li>IEEE International Conference on Intelligent Robots and Systems</li>
 					<li>IEEE Internet of Things Journal</li>
 					<li>IEEE Transactions on Circuits and Systems</li>
