Remove target attribute from email link
The target="_blank" attribute was removed from the email link to prevent opening a new tab when clicking the mailto link.

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 				<div>
 					<p>Vice President of Engineering at Renewvia</p>
 					<p>PhD in Electrical Engineering and Computer Science, MIT</p>
-					<address>Email: <a rel="author" href="mailto:nicholas.selby@renewvia.com" target="_blank">nicholas.selby@renewvia.com</a></address>
+					<address>Email: <a rel="author" href="mailto:nicholas.selby@renewvia.com">nicholas.selby@renewvia.com</a></address>
 				</div>
 				<div class="separator"></div>
 				<div id="social-media-wrapper">
