Add 'Journal of Field Robotics' to publication list
Included 'Journal of Field Robotics' in the list of publications in index.html.

--- a/index.html
+++ b/index.html
@@ -361,6 +361,7 @@
 					<li>IFAC International Symposium on Advances in Automotive Control</li>
 					<li>International Journal of Robust and Nonlinear Control</li>
 					<li>International Symposium on Mathematical Theory of Networks and Systems</li>
+					<li>Journal of Field Robotics</li>
 					<li>Oxford Open Energy</li>
 					<li>Social Sciences &amp; Humanities Open</li>
 					<li>Unconventional Resources</li>
