--- a/index.html
+++ b/index.html
@@ -355,6 +355,7 @@
 					<li>ACM Transactions on Sensor Networks</li>
 					<li>AIAA Journal of Guidance, Control, and Dynamics</li>
 					<li>Climate and Development</li>
+					<li>IEEE/CAA Journal of Automatica Sinica</li>
 					<li>IEEE International Conference on Intelligent Robots and Systems</li>
 					<li>IEEE Internet of Things Journal</li>
 					<li>IEEE Transactions on Circuits and Systems</li>
