--- a/index.html
+++ b/index.html
@@ -315,6 +315,8 @@
 				<p>Interested in inviting me to speak at your event? Please read my <a href="speaker-rider.html">speaker rider</a> before reaching out.</p>
 				Public Speaking:
 				<ul>
+					<li>Panelist on "Redefining Energy in an African Context" at the African Venture Philanthropy Alliance Conference (2025)</li>
+					<li>Invited speaker on "Digital Pathways to Carbon Finance" at the Nigeria Renewable Energy Innovation Forum (2025)</li>
 					<li>Panelist for the Africa Mini-Grid Developers Association workshop "<a rel="external" target="_blank" href="https://drive.google.com/file/d/1yxHVA9CHQGr9Ssur2tF5fwlLxe90Rc_J/view">Mastering Income Generation</a>" (2025)</li>
 					<li>Panelist on "Impact Mining: Bitcoin Hashrate for Good" episode of Bitcoin Mining and Beyond's <i><a rel="external" target="_blank" href="https://creators.spotify.com/pod/profile/compass-mining/episodes/Impact-Mining---Bitcoin-Hashrate-for-Good-w-Austin-Mitchell--Nicholas-Selby-e337nf7">Compass Mining</a></i> podcast (2025)</li>
 					<li>Panelist on the "Renewable Energy Roundtable" at the American Chamber of Commerce Business Summit, "Catalyzing the Future of U.S.-East Africa Trade and Investment" (2024)</li>
