--- a/emotion-validation-framework.html
+++ b/emotion-validation-framework.html
@@ -377,12 +377,12 @@
 					<span class="quote">"I feel like you're trying to destroy our relationship."</span>
 				</div>
 				<ul class="description">
-					<li>Not emotions—these are thoughts or beliefs disguised as feelings</li>
+					<li>Not emotions; these are thoughts or beliefs disguised as feelings</li>
 					<li>Objectively false statements that cannot be honestly validated</li>
 					<li>Often catastrophic or extreme interpretations</li>
 				</ul>
 				<div class="framework-note">
-					<span class="framework-label">NVC:</span> These are "faux feelings"—thoughts masquerading as emotions. True feelings are single words like angry, scared, or sad.
+					<span class="framework-label">NVC:</span> These are "faux feelings": thoughts masquerading as emotions. True feelings are single words like angry, scared, or sad.
 				</div>
 			</div>
 			
@@ -514,7 +514,7 @@
 					<li>Invites collaboration and shared problem-solving</li>
 				</ul>
 				<div class="framework-note">
-					<span class="framework-label">NVC + DBT:</span> Gold standard! Combines observation + feeling + body awareness. This is wise mind in action—integrating emotional and rational understanding with somatic intelligence.
+					<span class="framework-label">NVC + DBT:</span> Gold standard! Combines observation + feeling + body awareness. This is wise mind in action, integrating emotional and rational understanding with somatic intelligence.
 				</div>
 			</div>
 			
