kenyan food and cops

--- a/guide-to-kenya.html
+++ b/guide-to-kenya.html
@@ -163,18 +163,18 @@
 
 			<p>Nairobi has a ton of good restaurants. Here is an incomplete list of my favorites:</p>
 			<ul>
-				<li><a rel="external" target="_blank" href="http://www.abyssiniarestaurantnairobi.com/">Abyssinia</a>: Ethiopian. Abyssinia has the best shiro, but if you want meat, go to <a rel="external" target="_blank" href="https://asmara.co.ke/">Asmara</a> or <a rel="external" target="_blank" href="https://maps.app.goo.gl/GrjUqhXLhAhDUrHJ6">Gursha</a> instead.</li>
+				<li><a rel="external" target="_blank" href="https://maps.app.goo.gl/Ltz26r2uLEHue7yA9">Habesha</a>: Ethiopian (get a combo plate with shiro tegabino)</li>
 				<li><a rel="external" target="_blank" href="http://www.fogogaucho.co.ke/">Fogo Gaucho</a>: Brazilian steakhouse serving nyama choma</li>
-				<li><a rel="external" target="_blank" href="https://saritexpo.com/">Sarit Center</a> food court: a mall food court with an open roof and food and beer</li>
+				<li><a rel="external" target="_blank" href="https://saritexpo.com/">Sarit Center</a> food court: a mall food court with an open roof (get indian food from Dhaba, beer from Bila Shaka, and gelato from Gelato Street)</li>
 				<li><a rel="external" target="_blank" href="https://craftychameleon.co.ke/">Crafty Chameleon</a>: beer garden</li>
 				<li><a rel="external" target="_blank" href="https://goo.gl/maps/FQcKdWPA3Ki7Xkwo8">K'Osewe Ranalo</a>: cafeteria-style Kenyan food downtown with open-roof seating</li>
 				<li><a rel="external" target="_blank" href="http://www.havana.co.ke/">Havana</a>: Mexican-Kenyan fusion with creative tacos</li>
 				<li><a rel="external" target="_blank" href="https://maps.app.goo.gl/YgHSXvNuuznL6BVG9">Nargis</a>: Indian barbecue</li>
-				<li><a rel="external" target="_blank" href="https://www.chimekhouse.com/">Chimek</a>: Korean (get the kanjang chicken)</li>
+				<!-- <li><a rel="external" target="_blank" href="https://www.chimekhouse.com/">Chimek</a>: Korean (get the kanjang chicken)</li> -->
 				<li>Cafés like <a rel="external" target="_blank" href="https://palletcafe.co.ke/">Pallet Cafe</a>, <a rel="external" target="_blank" href="https://ke.springvalleycoffee.com/">Spring Valley Coffee</a>, <a rel="external" target="_blank" href="https://maps.app.goo.gl/nGcWm94sehYMXf8H7">Wasp & Sprout</a>, <a rel="external" target="_blank" href="https://www.shambacafe.co.ke/">Shamba Cafe</a>, <a rel="external" target="_blank" href="https://www.therivercafekenya.com/">River Cafe</a>, and <a rel="external" target="_blank" href="https://maps.app.goo.gl/F1K2KvnMCXpJ7pNZA">270°</a></li>
 				<li><a rel="external" target="_blank" href="https://goo.gl/maps/aeuH6A6XGcEameQQ8">Chinatown</a></li>
-				<li><a rel="external" target="_blank" href="https://goo.gl/maps/NTZ3LAKrbhX81ncC9">Cultiva</a>: maybe the tastiest restaurant in Nairobi (get the mushroom ceviche)</li>
-				<li><a rel="external" target="_blank" href="http://sushimitsuki.com/">Sushi Mitsuki</a>: authentic sushi, very expensive</li>
+				<li><a rel="external" target="_blank" href="https://goo.gl/maps/NTZ3LAKrbhX81ncC9">Cultiva</a>: farm-to-table (get the mushroom ceviche)</li>
+				<!-- <li><a rel="external" target="_blank" href="http://sushimitsuki.com/">Sushi Mitsuki</a>: authentic sushi, very expensive</li> -->
 				<li><a rel="external" target="_blank" href="https://www.hemingways-collection.com/nairobi/dining/">Hemmingway's</a>: bottomless brunch</li>
 				<li><a rel="external" target="_blank" href="https://goo.gl/maps/WwwJhTdNbiT8zCFF9">Yolo Ice Cream</a>: popular dessert hangout with massive portions</li>
 				<li>I eat lunch almost every day at a kibanda, or street food stall, down the street from my house. I get a mix of beans, cabbage, hot peppers, cut chapati, and sliced avocado with a cup of chai for about $1.</li>
@@ -510,6 +510,10 @@
 		<section id="Safety">
 			<h2>Safety</h2>
 			<p>Ensuring personal safety and security is a crucial aspect when moving to Kenya as an American. That said, I have never felt in danger in Nairobi. As with any city, the key to staying safe is by staying alert and practicing good common sense.</p>
+
+			<p>Kenyan police are infamous for widespread corruption. Most interactions with them involve requests for bribes, which vary by orders of magnitude depending on the infraction. It's an open secret that in November and December, they ramp up traffic stops in what appears to be an effort to generate extra income before the holidays. I recommend avoiding interactions with them when possible.</p>
+
+			<p>Since moving to Kenya, I've observed approximately annual, large-scale protests against police brutality in Nairobi's downtown area, the Central Business District or "CBD." Nonviolent protest is a protected activity under the Kenyan constitution, but police nonetheless deploy a variety of illegal strategies, including <a rel="external" target="_blank" href="https://www.bbc.com/news/articles/c3vngv60l0qo">hiring thugs to threaten protesters</a>, <a rel="external" target="_blank" href="https://www.reuters.com/world/africa/kenyans-brace-protests-one-year-after-storming-parliament-2025-06-25/">deploying lethal and nonlethal weapons into crowds</a>, and <a rel="external" target="_blank" href="https://www.aljazeera.com/features/2025/7/9/killed-by-those-meant-to-protect-kenyans-outraged-by-police-violence">targeting journalists</a>. These protests and the associated police violence have remained concentrated in the CBD and have not expanded into residential areas west of CBD.</p>
 
 			<p>The U.S. State Department has a mostly permanent <a rel="external" target="_blank" href="https://travel.state.gov/content/travel/en/traveladvisories/traveladvisories/kenya-travel-advisory.html">travel advisory</a> for the country, and the details are crucial to traveling safely. Almost always, tourist destinations around Kenya, including most of the safari parks and larger towns on the Swahili coast, are safe. It is usually not safe to venture into <b>Eastleigh</b> or <b>Kibera</b>, the latter being the largest urban slum in Africa.</p>
 
