--- a/guide-to-kenya.html
+++ b/guide-to-kenya.html
@@ -170,6 +170,7 @@
 				<li><a rel="external" target="_blank" href="https://goo.gl/maps/FQcKdWPA3Ki7Xkwo8">K'Osewe Ranalo</a>: cafeteria-style Kenyan food downtown with open-roof seating</li>
 				<li><a rel="external" target="_blank" href="http://www.havana.co.ke/">Havana</a>: Mexican-Kenyan fusion with creative tacos</li>
 				<li><a rel="external" target="_blank" href="https://maps.app.goo.gl/YgHSXvNuuznL6BVG9">Nargis</a>: Indian barbecue</li>
+				<li><a rel="external" target="_blank" href="https://maps.app.goo.gl/DmUnGiYZiiGskycD7">Sonal Nipa</a>: chaat (get the dahi puri)</li>
 				<!-- <li><a rel="external" target="_blank" href="https://www.chimekhouse.com/">Chimek</a>: Korean (get the kanjang chicken)</li> -->
 				<li>Cafés like <a rel="external" target="_blank" href="https://palletcafe.co.ke/">Pallet Cafe</a>, <a rel="external" target="_blank" href="https://ke.springvalleycoffee.com/">Spring Valley Coffee</a>, <a rel="external" target="_blank" href="https://maps.app.goo.gl/nGcWm94sehYMXf8H7">Wasp & Sprout</a>, <a rel="external" target="_blank" href="https://www.shambacafe.co.ke/">Shamba Cafe</a>, <a rel="external" target="_blank" href="https://www.therivercafekenya.com/">River Cafe</a>, and <a rel="external" target="_blank" href="https://maps.app.goo.gl/F1K2KvnMCXpJ7pNZA">270°</a></li>
 				<li><a rel="external" target="_blank" href="https://goo.gl/maps/aeuH6A6XGcEameQQ8">Chinatown</a></li>
