--- a/guide-to-kenya.html
+++ b/guide-to-kenya.html
@@ -171,6 +171,7 @@
 				<li><a rel="external" target="_blank" href="http://www.havana.co.ke/">Havana</a>: Mexican-Kenyan fusion with creative tacos</li>
 				<li><a rel="external" target="_blank" href="https://maps.app.goo.gl/YgHSXvNuuznL6BVG9">Nargis</a>: Indian barbecue</li>
 				<li><a rel="external" target="_blank" href="https://maps.app.goo.gl/DmUnGiYZiiGskycD7">Sonal Nipa</a>: chaat (get the dahi puri)</li>
+				<li><a rel="external" target="_blank" href="https://gogolpizza.com/">Gogol Pizza</a>: it's a low bar, but the Loresho location has the best pizzas in Nairobi</li>
 				<!-- <li><a rel="external" target="_blank" href="https://www.chimekhouse.com/">Chimek</a>: Korean (get the kanjang chicken)</li> -->
 				<li>Cafés like <a rel="external" target="_blank" href="https://palletcafe.co.ke/">Pallet Cafe</a>, <a rel="external" target="_blank" href="https://ke.springvalleycoffee.com/">Spring Valley Coffee</a>, <a rel="external" target="_blank" href="https://maps.app.goo.gl/nGcWm94sehYMXf8H7">Wasp & Sprout</a>, <a rel="external" target="_blank" href="https://www.shambacafe.co.ke/">Shamba Cafe</a>, <a rel="external" target="_blank" href="https://www.therivercafekenya.com/">River Cafe</a>, and <a rel="external" target="_blank" href="https://maps.app.goo.gl/F1K2KvnMCXpJ7pNZA">270°</a></li>
 				<li><a rel="external" target="_blank" href="https://goo.gl/maps/aeuH6A6XGcEameQQ8">Chinatown</a></li>
@@ -178,6 +179,7 @@
 				<!-- <li><a rel="external" target="_blank" href="http://sushimitsuki.com/">Sushi Mitsuki</a>: authentic sushi, very expensive</li> -->
 				<li><a rel="external" target="_blank" href="https://www.hemingways-collection.com/nairobi/dining/">Hemmingway's</a>: bottomless brunch</li>
 				<li><a rel="external" target="_blank" href="https://goo.gl/maps/WwwJhTdNbiT8zCFF9">Yolo Ice Cream</a>: popular dessert hangout with massive portions</li>
+				<li><a rel="external" target="_blank" href="https://www.instagram.com/sweet_n_swirl.nairobi/">Sweet n Swirl</a>: delivery-only homemade vegan cakes</li>
 				<li>I eat lunch almost every day at a kibanda, or street food stall, down the street from my house. I get a mix of beans, cabbage, hot peppers, cut chapati, and sliced avocado with a cup of chai for about $1.</li>
 			</ul>
 
@@ -544,6 +546,7 @@
 				<li><a rel="external" target="_blank" href="https://www.discoverafricablog.com/the-maasai-market-nairobi/">Maasai Market</a>: outdoor marketplace to bargain for Kenyan trinkets like paintings, sculptures, and blankets that changes its location based on the day of the week</li>
 				<li><a rel="external" target="_blank" href="https://goo.gl/maps/FxdnwYXwYeLLg9816">Toi Market</a>: large marketplace for clothes, groceries, and household items</li>
 				<li><a rel="external" target="_blank" href="https://maps.app.goo.gl/sMDM5bC7bGG427Hy9">Cheche Bookshop and Cafe</a>: my favorite bookstore with delicious cookies, and frequent host of <a rel="external" target="_blank" href="https://www.instagram.com/chechebooks/">community events</a></li>
+				<li><a rel="external" target="_blank" href="https://www.instagram.com/k1klubhouse/">K1 Klubhouse</a>: host of weekly movie nights</li>
 				<li><a rel="external" target="_blank" href="https://www.instagram.com/stories/gondwana_ke/">Gondwana</a>: Afro house music festival at different venues each month</li>
 				<li><a rel="external" target="_blank" href="https://www.giraffecentre.org/">Giraffe Center</a>: feed a giraffe from your hands</li>
 				<li><a rel="external" target="_blank" href="https://visit.sheldrickwildlifetrust.org/">Elephant Orphanage</a>: baby elephants; book weeks in advance or overpay for a tour company like <a rel="external" target="_blank" href="https://gracepattecotourskenya.org/">Gracepatt</a></li>
