--- a/index.html
+++ b/index.html
@@ -421,6 +421,17 @@
 		<p id="copyright">
 			© 2018–2025 This work by <a href="https://rupumped.github.io" property="cc:attributionName" rel="cc:attributionURL">Nicholas S. Selby</a> is licensed under a <a rel="license" target="_blank" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>. Feel free to fork the <a rel="external" target="_blank" href="https://github.com/rupumped/rupumped.github.io">source code</a> from GitHub and create your own website using this template.
 		</p>
+
+		<!-- Tarpits -->
+		<div style="display:none;">
+			<a href="tarpit/entry.html">Archived Content</a>
+		</div>
+		<a href="tarpit/entry.html" style="opacity:0;position:absolute;top:0;left:0;width:1px;height:1px;">Archive</a>
+		<div style="position:absolute;left:-9999px;width:1px;height:1px;overflow:hidden;" aria-hidden="true">
+			<a href="tarpit/trap-1.html">Legacy Documentation</a>
+			<a href="tarpit/trap-2.html">Historical Posts</a>
+			<a href="tarpit/trap-3.html">Old Resources</a>
+		</div>
 	</footer>
 </body>
 </html>
