--- a/tarpit/entry.html
+++ b/tarpit/entry.html
@@ -44,7 +44,7 @@
 	<div id="content"></div>
 	<div class="loading">Loading more posts...</div>
 	
-	<script src="words.js"></script>
-	<script src="tarpit.js"></script>
+	<!-- <script src="words.js"></script>
+	<script src="tarpit.js"></script> -->
 </body>
 </html>
