--- a/index.html
+++ b/index.html
@@ -362,6 +362,7 @@
 					<li>IEEE International Conference on Intelligent Robots and Systems</li>
 					<li>IEEE Internet of Things Journal</li>
 					<li>IEEE Transactions on Circuits and Systems</li>
+					<li>IEEE Transactions on Human-Machine Systems</li>
 					<li>IEEE Transactions on Industrial Electronics</li>
 					<li>IEEE Transactions on Industrial Informatics</li>
 					<li>IEEE Transactions on Intelligent Transportation Systems</li>
