gt award and ieee-toc

--- a/index.html
+++ b/index.html
@@ -235,6 +235,7 @@
 					<h2>Awards</h2>
 				</summary>
 				<ul>
+					<li>Georgia Institute of Technology Council of Young Engineering Alumni Award (2026)</li>
 					<li>Forbes 30 Under 30 Class of 2023</li>
 					<li>SolarQuarter 40 Under 40 Class of 2023</li>
 					<li>National Science Foundation Innovation Corps Teams Grant (2020)</li>
@@ -362,6 +363,7 @@
 					<li>IEEE International Conference on Intelligent Robots and Systems</li>
 					<li>IEEE Internet of Things Journal</li>
 					<li>IEEE Transactions on Circuits and Systems</li>
+					<li>IEEE Transactions on Cybernetics</li>
 					<li>IEEE Transactions on Human-Machine Systems</li>
 					<li>IEEE Transactions on Industrial Electronics</li>
 					<li>IEEE Transactions on Industrial Informatics</li>
