--- a/index.html
+++ b/index.html
@@ -316,6 +316,7 @@
 				<p>Interested in inviting me to speak at your event? Please read my <a href="speaker-rider.html">speaker rider</a> before reaching out.</p>
 				Public Speaking:
 				<ul>
+					<li>Panelist at the USG Private Sector Foreign Assistance Roundtable (2026)</li>
 					<li>Panelist on "Redefining Energy in an African Context" at the African Venture Philanthropy Alliance Conference (2025)</li>
 					<li>Invited speaker on "Digital Pathways to Carbon Finance" at the Nigeria Renewable Energy Innovation Forum (2025)</li>
 					<li>Panelist for the Africa Mini-Grid Developers Association workshop "<a rel="external" target="_blank" href="https://drive.google.com/file/d/1yxHVA9CHQGr9Ssur2tF5fwlLxe90Rc_J/view">Mastering Income Generation</a>" (2025)</li>
